oauth and http reflactoring, and new classes ready for httpurlconnection.